--- a/LSU_Library_Website/HTML/homePage.html
+++ b/LSU_Library_Website/HTML/homePage.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title> LSU Library - Home </title
+    <title> LSU Library - Home </title>
 
     <link rel="icon" type="image/png" href="icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
