--- a/Website/LSU_Library_Website/HTML/librarianDashboard.html
+++ b/Website/LSU_Library_Website/HTML/librarianDashboard.html
@@ -2,16 +2,28 @@
 <html>
   <head>
     <title> LSU Library - Dashboard </title>
-  </head>
-  <body>
-    <!-- MAIN SECTION - Begin -->
-      <div id="main">
 
+    <style>
+      *{
+        margin: 0;
+      }
+    </style>
+  </head>
+  <body style="height: 100%; ">
+    <!-- MAIN SECTION - Begin -->
         <!-- HEADER SECTION - Begin -->
-        <div style="height: 100px; width: 100%; background-color: blue;">
+        <div style="height: 60px; width: 100%; background-color: #3498DB;">
+wfefef
+        </div>
+        <div style="height: 1200px; width: 30px; background-color: #3498DB">
+
+          <table>
+            <tr><td>eff</td></tr>
+            <tr><td>wfefef</td></tr>
+            <tr><td>wdw</td></tr>
+          </table>
 
         </div>
-
         <!-- HEADER SECTION - End -->
 
 
@@ -23,8 +35,6 @@
         <!-- FOOTER SECTION - Begin -->
 
         <!-- FOOTER SECTION - End -->
-
-      </div>
     <!-- MAIN SECTION - End -->
   </body>
 </html>
